Functional Implementation : Save &Read Nested Collection

--- a/app/src/main/res/layout/user_page.xml
+++ b/app/src/main/res/layout/user_page.xml
@@ -48,7 +48,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_save_db" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_save_collection" />
 
     <EditText
         android:id="@+id/edittext_name"
@@ -112,14 +112,27 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/btn_save_db"
+        android:id="@+id/btn_save_document"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
-        android:text="DB 저장"
+        android:text="문서 저장"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edittext_desc" />
+
+    <Button
+        android:id="@+id/btn_save_collection"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="20dp"
+        android:text="문서 안에 컬렉션 저장"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_save_document" />
 </androidx.constraintlayout.widget.ConstraintLayout>
