--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="10dp"
+        android:backgroundTint="#CDCDCD"
         android:hint="아이디를 입력해주세요"
         android:text=""
         android:textColor="@color/black"
@@ -54,6 +55,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="40dp"
+        android:backgroundTint="#CDCDCD"
         android:hint="비밀번호를 입력해주세요"
         android:inputType="textPassword"
         android:text=""
